--- a/VRChat/98/1064398.html
+++ b/VRChat/98/1064398.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "T1iaJyXKQdTgFnnNGONGr+X56RCRPJH/404XJJkQD1E="></script>
+    "i4pTkBtK1uHgdu2Ns4J3OFRBdN8kLD9NjE/aXt0AGwQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"雷核槌「pRacker」","description":"VRChatでの利用を想定した大きめのハンマーです。△4428\nunitypackageでの提供となります。\nおまけの放電パーティクル・シェーダー設定済みprefab付属。","url":"https://booth.pm/ja/items/1064398","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/7d19caf7-8413-4b46-abe2-17f1a8dd9250/i/1064398/37b9e183-94d8-4969-bb2b-cbfcdf41b195_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T1iaJyXKQdTgFnnNGONGr+X56RCRPJH/404XJJkQD1E="></script>
+    nonce="i4pTkBtK1uHgdu2Ns4J3OFRBdN8kLD9NjE/aXt0AGwQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -469,9 +469,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
