--- a/VRChat/48/1075348.html
+++ b/VRChat/48/1075348.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GYRv/LeYEveSQ64XtTBmj4Zrej4sy19yN3hLEhcxb+U="></script>
+    "eGKHJp/Pw9AviiI8mJcCL+VUAiP863FuHXsrH37IkD8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Gloria de Michael","description":"武器第3弾、ハロウィンに合わせたかどうかは定かではありませんが、天使の羽根つきの可変剣です。\n今回はちゃんと変形アニメーション付きですよー。\n通常時の剣に始まり、爪、弓、盾形態があります。\n\nまた、羽根の部分にはボーンも入れてあるので、「アーマチュア、骨、羽根3種」を別のオブジェクトとして取り出して貰えば、アバターに取り付け可能な翼としても使用できます。（羽根のアニメーションは各自で作成してください）\n\nれっつはっぴーはろうぃん、です。\n\nシェーダーに、みに様のまんまるしぇーだーver1.2を使用させていただきました。\n\n\n※ VRChat用アニメーションの組み込み方法\n1 Unity上で、Gloria de Michael（以下GdM）をHierarchyに追加します。\n2 GdMをCtrl＋Dで複製します。\n3 複製したものに、変形させたい形のアニメーターをドラッグ＆ドロップしてください。（オブジェクト1つにつきアニメーター1つ）\n4 カスタムオーバーライドで武器を呼び出すと、変形モーションが再生されます。\n\n\n仕様\n\n・ポリゴン数　△6044\n\n・テクスチャ5枚同梱（羽根の部分は共通のテクスチャです）\n\n・・Unity Package、FBXファイル、テクスチャ5枚、read meが入っています。\n\n以下、read meより転記\n\n\n利用規約\n当モデルは、Aliciaが作成した可変型剣の3Dオブジェクトです。\nVRChatやMMD等、ご自由にお使いください。\n\n・個人利用に限り自由。（収益化している動画に映り込む程度の事は問題ありません。）\n\n・テクスチャ、メッシュデータ等の改変利用自由。\n\n\n禁止事項\n\n・無断で当モデルを二次配布する事。商用利用の際はご連絡ください。\n\n・当モデルの製作者であると騙る事。\n\n\n当モデルの使用によって生じるいかなる損害に対して、当方は一切責任を負いません。\n\n何かご連絡、ご質問等がございましたら、以下のアドレスまでお願いします。\n\nGmail : alicia.wlcreation@gmail.com\nTwitter : @Alicia_oekaki","url":"https://booth.pm/ja/items/1075348","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/5043ac6d-805c-41e4-baa7-1837025294e9/i/1075348/1a6d96b3-1b3b-4e5f-8b9d-32718f13214d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GYRv/LeYEveSQ64XtTBmj4Zrej4sy19yN3hLEhcxb+U="></script>
+    nonce="eGKHJp/Pw9AviiI8mJcCL+VUAiP863FuHXsrH37IkD8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -397,9 +397,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
