--- a/VRChat/35/1075235.html
+++ b/VRChat/35/1075235.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Tp0RYGZa/Wh2MGT4m+RkOGFKpdJOBD4GjM+qbZ0jlRM="></script>
+    "s8zvIWMdzKhmETvs19AYH9iD2v1WkhfzupW4nMJrHJ8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スタッフ証（注目看板つき）","description":"光り輝くスタッフ証です。\n自分が実際にイベントスタッフをさせていただいた際に作成・使用したものです。\n画像のとおり、暗い場所でもよくわかります。その分目立ちます。\n\n\n・内容物はunitypackageのみです\n・テクスチャは使用していませんので色変え自由です。\n\n※無料版もお布施用も内容に差はありません。\n\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing","url":"https://booth.pm/ja/items/1075235","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1075235/29850427-00c4-44e7-ba30-25bd45a2965f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Tp0RYGZa/Wh2MGT4m+RkOGFKpdJOBD4GjM+qbZ0jlRM="></script>
+    nonce="s8zvIWMdzKhmETvs19AYH9iD2v1WkhfzupW4nMJrHJ8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
