--- a/VRChat/78/1073778.html
+++ b/VRChat/78/1073778.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "p/mgwGV6MZ7QpnT8B6fK7t6/V+8TVkKBNhiaOzFsvI8="></script>
+    "/49n0udEqPE3skIpy2O6O/ggJBzJ02iSeC2Y1k5vVBg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"かぼちゃのランタン【VRChat用】","description":"ハロウィンの準備なーんもしてない！という人向け、普段のアバターに持たせるだけでなんとなくハロゥイーンになるカボチャのランタン配布です。unitypackage形式です。\n5742△ポリゴンなので結構エグいですが、実際の工作工程を想定して現実にあり得る構造を意識したのがコダワリポイントです。\nダイナミックボーンに対応しているので、ダイナミックボーンインポート済みのプロジェクトにインポートするとそのまま動きます。（竿とろうそくの炎）\nアバターの手に持たせたい場合は、オブジェクト全体をアバターのルート以下に移動させたあと、「panpkinアーマチュア」というアーマチュアのオブジェクトをHand等キャラクターの任意のアーマチュアへD\u0026Dして子にしてやってください。（メッシュなどは移動する必要ありません）\n\n著作権は放棄しませんが、使用用途、再配布等一切制限しません。このモデルデータを利用して発生した不利益などは当方一切保証しません。\n\n竿は鋼鉄製、カボチャの中にはろうそくの燭台が入っています。\n竿で1キロ、カボチャ部分で2キロ近くあるので結構重い（という設定）です。腕力に自信のあるアバター向けです。","url":"https://booth.pm/ja/items/1073778","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/35ad0fa7-eb31-41fa-b842-fcdd7687593f/i/1073778/004540b3-6895-47f8-88cf-8fd6a90c196d_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="p/mgwGV6MZ7QpnT8B6fK7t6/V+8TVkKBNhiaOzFsvI8="></script>
+    nonce="/49n0udEqPE3skIpy2O6O/ggJBzJ02iSeC2Y1k5vVBg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
