--- a/VRChat/26/1073626.html
+++ b/VRChat/26/1073626.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uFNygmCLbOw1LNRJhMrhwzotAQw6RhZKU1LTVdk2+C8="></script>
+    "YfNrq/LaaL8fkIlKfgCb2IZgRqXR6ea82SMYB+4oiLc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ClayDoll01「ネージュ」","description":"オリジナル3Dモデル：　ClayDoll01「ネージュ」\nモデル製作者：ClayDoll\n利用規約　2018年10月30日作成\n\n【概要】\n・UnityのHumanoid形式に対応したオリジナル3Dモデルです。\n・スカートとリボンにUnity上でクロスシミュレーションを使用しています。\n・ポリゴン数：17155\n・Lipsync対応\n・表情モーフ数：20（Lipsync込み：34）\n・まんまるしぇーだーを使用しています\n\n【同梱ファイル】\n・texture用png、UVMAP用jpg、CD01.fbx、CD01.unitypackage\n\n【使い方】\n1.UnityProjectを作成します。\n2.VRCSDK（無料）をダウンロードしてImportします。\n3.当ファイルに同梱されているCD01.UnityPackageをImportします。\n4.Project内のCD01 PrefabをHierarchyにドラッグ＆ドロップします。\n5.MenuのVRChatSDK \u003e Show Build Control Panelでアップロードします。\n\n\n\n【免責事項】\n・作成者は、本データに関していかなる保証も行いません。\n・このモデルを使用して発生したいかなる損害・損失・トラブル・その他の不利益に対して当方は一切責任を持ちません。\n・この利用規約は予告なく変更される場合があることをご了承ください。\n\n【許可事項】\n・このモデルの個人利用及び商用利用。\n・このモデルの無改変および改変利用。\n・動画・自主制作ゲーム・VRChat等、ご自由にお使いください。\n\n【禁止事項】\n・このモデルを改変の有無を問わず再配布する行為。\n・このモデルの一部を使用したデータを再配布する行為。\n・このモデルを用いた公序良俗に違反する行為。\n・政治的目的・誹謗中傷目的などで使用する行為。\n・このモデルの製作者を騙る行為。\n\n【使用させていただいた素材】\n・まんまるしぇーだー（みに様）\n\n","url":"https://booth.pm/ja/items/1073626","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/ebfe3cfc-08d0-4ca0-ae3e-ccdfe89316ed/i/1073626/964ed351-c2f0-4a91-8a67-4e0881ac04c0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uFNygmCLbOw1LNRJhMrhwzotAQw6RhZKU1LTVdk2+C8="></script>
+    nonce="YfNrq/LaaL8fkIlKfgCb2IZgRqXR6ea82SMYB+4oiLc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
