--- a/VRChat/33/1073033.html
+++ b/VRChat/33/1073033.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VmkSzSd7o0Di1E1IiY3Xf5fQxqedxKfvnbiIWvfu1/4="></script>
+    "OqgWMcPJfB2HGeoyU3f3HjP7rh8thzXBtAD4BZkHKWs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"C's Stealth Shader","description":"VRChat向けに作成した、光学迷彩的に透明になるステルスシェーダーです。\n\n◆VRChat向けの商品ですが、その他の用途ではサポート外となります。\n◆Unity 2017想定\n◆改変可能\n◆商用利用の場合は、必ず著作権者を明示してください。\n\n◆ライセンス\nコンテンツは著作権で保護されています。\nコンテンツを使用することにより、以下の条件に同意するものとします。\n\n1.コンテンツをそのまま許可なく第三者へ販売、配布の禁止。\n　著作者の利益を損なう場合を除き、コンテンツが音声や動画、ソフトウェアや機械、あるいは演劇等の作品に組み込まれる場合はこの限りではない。\n\n2.商用利用では個人、法人を問わず、必ず解釈できるように著作者がClomaであることを明示すること。\n\n3.コンテンツを改変した物についても、当ライセンスを継承すること。\n\n規約は予告なしに変更されることがあります。","url":"https://booth.pm/ja/items/1073033","offers":{"priceCurrency":"JPY","@type":"Offer","price":"740"},"image":"https://booth.pximg.net/c/620x620/02658766-23c0-4747-bfaf-8658ada54514/i/1073033/d8c0df13-0c68-40bc-abe8-5383a3853b86_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VmkSzSd7o0Di1E1IiY3Xf5fQxqedxKfvnbiIWvfu1/4="></script>
+    nonce="OqgWMcPJfB2HGeoyU3f3HjP7rh8thzXBtAD4BZkHKWs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -418,9 +418,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
