--- a/VRChat/88/1071588.html
+++ b/VRChat/88/1071588.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TFEbAPjCV3qbnZwtbsZ4FF/qLcZHf8koC4qZCauFJeQ="></script>
+    "8iCbQXqsDesuKCoFa73f7pIMFM5uvKumqUp4tUhpVqA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"C Sharp Force バッジ","description":"C Sharp Forceのバッジです。\n活動内容、条件などはとくにありませんので、VRChatでC#について話してみたい、みたいな方はどなたでも自由にご利用いただけます。\n改変、再配布も自由です。","url":"https://booth.pm/ja/items/1071588","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/64d6cf4e-7b03-4338-9fdc-ca5b8647d504/i/1071588/2c0325e2-40dc-49a6-83a9-99f83f98525f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TFEbAPjCV3qbnZwtbsZ4FF/qLcZHf8koC4qZCauFJeQ="></script>
+    nonce="8iCbQXqsDesuKCoFa73f7pIMFM5uvKumqUp4tUhpVqA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -338,9 +338,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
