--- a/VRChat/96/1070896.html
+++ b/VRChat/96/1070896.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8amgoXMOXyhe+rsxcyn72ZA/K8oxs3Iw3cA8pIVqJnY="></script>
+    "LOBL7Xmz9eNwvlQGvm/QY3Mdss2OVu3SsuDGmVsecxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル コムラサキ","description":"MagicaVoxelにて作成された3Dモデルです。\nVRChatやその他ゲームなどのデジタルコンテンツにご利用いただけます。\n\n\n本モデルを購入した時点で本利用規約に同意したものとします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n・本モデル、改造モデル著作権はほーのき（booooooh522）に帰属するものとします。\n・本モデルデータを使って制作された作品（動画・画像・ゲーム等）で対価を得る等、営利目的での使用は可能です。\n・本モデルデータの改変は自由です。\n・R-18, R-18Gコンテンツでの利用は自由です。\n・利用者が、二次創作で改変したモデルデータを配布することは禁止します。\n\n","url":"https://booth.pm/ja/items/1070896","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/766abe90-a3ce-40ec-829e-ee51f60a5e39/i/1070896/31ab00b0-4361-451f-b908-0a8a5e3c372c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8amgoXMOXyhe+rsxcyn72ZA/K8oxs3Iw3cA8pIVqJnY="></script>
+    nonce="LOBL7Xmz9eNwvlQGvm/QY3Mdss2OVu3SsuDGmVsecxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -369,9 +369,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
